fixup! Add support to zeroize plaintext in S3 record layer

--- a/doc/man3/SSL_CTX_set_options.pod
+++ b/doc/man3/SSL_CTX_set_options.pod
@@ -267,12 +267,12 @@ clients.
 
 =item SSL_OP_CLEANSE_PLAINTEXT
 
-By default TLS connections keep a copy of received plaintext data in a
-static buffer until it is overwritten by the next portion of
-data. When enabling SSL_OP_CLEANSE_PLAINTEXT this plaintext is
-cleansed by calling OPENSSL_cleanse(3) after passing data to the
-application. Data is also cleansed when releasing the connection
-(eg. L<SSL_free(3)>).
+By default TLS connections keep a copy of received plaintext
+application data in a static buffer until it is overwritten by the
+next portion of data. When enabling SSL_OP_CLEANSE_PLAINTEXT
+deciphered application data is cleansed by calling OPENSSL_cleanse(3)
+after passing data to the application. Data is also cleansed when
+releasing the connection (eg. L<SSL_free(3)>).
 
 Since OpenSSL only cleanses internal buffers, the application is
 still responsible for cleansing all other buffers. Most notable this
