Completely remove "func" from ERR state.
Use EPERM not "1" in errtest.
Skip a sub-test if EPERM is too big.
Add some constants and comments on error code format, update documentation.
Clean up some code in err library.

Fixes: #12276

--- a/doc/man3/ERR_load_strings.pod
+++ b/doc/man3/ERR_load_strings.pod
@@ -46,6 +46,10 @@ library number.
 
 L<ERR_load_strings(3)>
 
+=head1 HISTORY
+
+Starting with OpenSSL 3.0, the B<func> argument is ignored.
+
 =head1 COPYRIGHT
 
 Copyright 2000-2018 The OpenSSL Project Authors. All Rights Reserved.
