revised version for pull request
CLA: trivial

--- a/doc/man3/ECDSA_SIG_new.pod
+++ b/doc/man3/ECDSA_SIG_new.pod
@@ -140,7 +140,7 @@ The error codes can be obtained by L<ERR_get_error(3)>.
 =head1 EXAMPLES
 
 Creating an ECDSA signature of a given SHA-256 hash value using the
-named curve prime256v1 (a.k.a. P-256).
+named curve prime256v1 (aka P-256).
 
 First step: create an EC_KEY object (note: this part is B<not> ECDSA
 specific)
