--- a/doc/man3/EVP_EncryptInit.pod
+++ b/doc/man3/EVP_EncryptInit.pod
@@ -219,7 +219,7 @@ checks if B<in> and B<out> are partially overlapping, and if they are
 
 If padding is enabled (the default) then EVP_EncryptFinal_ex() encrypts
 the "final" data, that is any data that remains in a partial block.
-It uses standard block padding (a.k.a. PKCS padding) as described in
+It uses standard block padding (aka PKCS padding) as described in
 the NOTES section, below. The encrypted
 final data is written to B<out> which should have sufficient space for
 one cipher block. The number of bytes written is placed in B<outl>. After
