--- a/INSTALL
+++ b/INSTALL
@@ -1206,6 +1206,25 @@
 
  $ make TESTS='[89]? -90'
 
+ Running Tests in Parallel
+ -------------------------
+
+ By default the test harness will execute the selected tests sequentially.
+ Depending on the platform characteristics, running more than one test job in
+ parallel may speed up test execution.
+ This can be requested by setting the `HARNESS_JOBS` environment variable to a
+ positive integer value. This specifies the maximum number of test jobs to run
+ in parallel.
+
+ Depending on the Perl version different strategies could be adopted to select
+ which test recipes can be run in parallel.  In recent versions of Perl, unless
+ specified otherwise, any task can be run in parallel. Consult the documentation
+ for `TAP::Harness` to know more.
+
+ To run up to four tests in parallel at any given time:
+
+ $ make HARNESS_JOBS=4 test
+
  Note on multi-threading
  -----------------------
 
