--- a/doc/man3/SSL_CTX_set_options.pod
+++ b/doc/man3/SSL_CTX_set_options.pod
@@ -275,9 +275,9 @@ after passing data to the application. Data is also cleansed when
 releasing the connection (eg. L<SSL_free(3)>).
 
 Since OpenSSL only cleanses internal buffers, the application is still
-responsible for cleansing all other buffers. Most notable this applies
-to buffers passed to functions like L<SSL_read(3)>,
-L<SSL_peek(3)|SSL_read(3)> but also like L<SSL_write(3)>.
+responsible for cleansing all other buffers. Most notably, this
+applies to buffers passed to functions like L<SSL_read(3)>,
+L<SSL_peek(3)> but also like L<SSL_write(3)>.
 
 =back
 
